# pythom

./: .gitignore  README.md  pyproject.toml
10_support_vector_machines/: svm_plots.py
11_support_vector_machines/: app.ipynb  datasets.py  svm_2d.py  svm_3d.py  svm_plots.py  template.py
1_optimize_media_spend/: dataset.csv  geek.py  run.py
2_gam/: .Rhistory  gam_s_curves.R
4_scrape_tmt_articles/: run.py
5_content_based_recommender/: output.csv  run.py
6_deploy_spark_cluster_on_aws/: run.py
6_deploy_spark_cluster_on_aws/files/: setup.sh
6_deploy_spark_cluster_on_aws/spark_example/: wordcount.py
7_data_science_in_python/: business_case_solver.py  business_case_solver_without_classes.py  fictional_data_generator.py  run_business_case_solver.py  util.py
7_data_science_in_python/data/: df.csv  df_engagements.csv  df_sessions.csv
7_data_science_in_python/output/: df_after_merge.csv  df_transformed.csv
8_collaborative_filtering_recommender/: data_processor.py  model_fitter.py  readme.md  requirements.txt  run.py  run_app.py
8_collaborative_filtering_recommender/data/: articles.csv
9_active_emr_cluster_checker/: lambda_function.py  readme.md
